# ros_buildfarm

./: .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  setup.cfg  setup.py  stdeb.cfg
doc/: basic_configuration.rst  configuration.rst  configuration_options.rst  configure_customized_buildfarm.rst  custom_rosdistro.rst  deploy_configuration.rst  devel_call_graph.dot  environment.rst  general_process.rst  generate_graphs.sh  how_to_build_and_release_custom_packages.rst  how_to_deploy_buildfarm.rst  how_to_deploy_customized_buildfarm.rst  how_to_fork_rosdistro_database.rst  index.rst  miscellaneous_jobs.rst  ongoing_operations.rst  release_call_graph.dot  release_jobs.rst
dummy_package/: CMakeLists.txt  package.xml
ros_buildfarm/: __init__.py  _version.py  aggregate_status.py  argument.py  binarydeb_job.py  binaryrpm_job.py  bloom_status.py  build_configuration.py  catkin_workspace.py  ci_job.py  colcon.py  common.py  crumb_requester.py  debian_repo.py  devel_job.py  doc_job.py  docker_common.py  git.py  http_cache.py  jenkins.py  jenkins_credentials.py  package_repo.py  prerelease.py  pulp.py  release_common.py  release_job.py  rosdoc_index.py  rosdoc_lite.py  rpm_repo.py  sourcedeb_job.py  sourcerpm_job.py  status_page.py  status_page_input.py  super_status.py  templates.py  trigger_job.py  vcs.py  workspace.py
scripts/: generate_all_jobs.py  generate_dashboard_job.py  subprocess_reaper.py
templates/: dashboard_job.xml.em  dashboard_view_test_result_column.xml.em  generic_view.xml.em
test/: aggregate_status_tests.yaml  dockerfile_generation_test.py  (+6 more)
(+540 files in other folders)
