<?xml version="1.0"?>
<package>
  <name>dummy_package</name>
  <version>1.0.0</version>
  <description>A dummy package</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
